fix facets header color
maybe got messed up in a merge

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -119,6 +119,7 @@
       color: $bg-lightly-shaded;
       text-transform: uppercase;
       h2.facets-heading {
+        color: white;
         margin: 0;
         font-weight: $semi-bold-weight;
         font-size: $font-size-base;
